<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.czu.rsscollector.Edit">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtOdkaz"
        android:text="@string/url"
        android:textSize="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtNazev"
        android:text="@string/name"
        android:textSize="20dp"
        android:layout_below="@+id/inputUrl"/>
    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/inputUrl"
        android:layout_below="@+id/txtOdkaz"/>
    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/inputName"
        android:layout_below="@+id/txtNazev"/>
    <Button
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:text="@string/save"
        android:id="@+id/btnSaveCh"
        android:layout_below="@+id/inputName"
        android:layout_centerHorizontal="true"
        android:onClick="onClickEdit"/>
    <Button
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:text="@string/delete"
        android:id="@+id/btnDeleteCh"
        android:layout_below="@+id/btnSaveCh"
        android:layout_centerHorizontal="true"
        android:onClick="onClickEdit"/>

</RelativeLayout>
