<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.czu.rsscollector.ArticleSaved">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/headline"
        android:textSize="20dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/headline"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/content"
        android:id="@+id/content"
        android:layout_below="@+id/headline"/>
    <Button
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:id="@+id/btnDeleteA"
        android:layout_below="@+id/content"
        android:text="@string/deleteA"
        android:layout_centerHorizontal="true"
        android:onClick="onClickSaved"/>

</RelativeLayout>
